--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
 <audio controls>
-  <source src="sneakpeek.mp3" type="audio/mpeg">
+  <source src="sneakpeekupdated.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
 
