--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>???</title>
+<link rel="icon" href="heisstillalive.ico" type="image/x-icon">
 <style>
   body {
     margin: 0;
