--- a/index.html
+++ b/index.html
@@ -2,28 +2,27 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>???</title>
+<title>Gorilla Gaze</title>
 <link rel="icon" href="heisstillalive.ico" type="image/x-icon">
 <style>
   body {
-    margin: 0;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: black;
-  }
-  audio {
-    width: 300px;
-  }
+  margin: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: black;
+  color: white;
+  font-family: Arial, sans-serif;
+}
 </style>
 </head>
 <body>
 
-<audio controls>
-  <source src="sneakpeekupdated.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
-</audio>
+  <p>
+    Hello. This is my website for my game, Gorilla Gaze. It's currently a work in progress. 
+    Click here for a <a href="https://belgaboi.github.io/website/sneakpeekupdated.mp3">sneakpeek</a>.
+  </p>
 
 </body>
 </html>
