--- a/index.html
+++ b/index.html
@@ -5,16 +5,29 @@
 <title>Gorilla Gaze</title>
 <link rel="icon" href="heisstillalive.ico" type="image/x-icon">
 <style>
-  body {
+body {
   margin: 0;
   height: 100vh;
+
   display: flex;
   justify-content: center;
   align-items: center;
-  background: black;
-  color: white;
+
+  background-image: url("bg.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  color: #a400bd;
   font-family: Arial, sans-serif;
-}
+ }
+  a {
+    color: #dd00ff;
+    text-decoration: line-through;
+  }
+  a: hover {
+    color: #ff00ff;
+  }
 </style>
 </head>
 <body>
